Resolved overflow issues

--- a/web/static/styles/imported.css
+++ b/web/static/styles/imported.css
@@ -1309,7 +1309,8 @@ data {
 }
 
 body, html {
-    margin: 0
+    margin: 0;
+    overflow-x: hidden;
 }
 
 .site.svelte-qlls6c {
